@@ -315,7 +315,7 @@ OCaml 5.0
   (Gabriel Scherer, review by Enguerrand Decorne)
 
 - #11058: basic debugging documentation in runtime/HACKING.adoc
-  (Gabriel Scherer, review by ???)
+  (Gabriel Scherer, review by Enguerrand Decorne and Nicolás Ojeda Bär)
 
 - #11199: Stop installing topdirs.cmi twice. The toplevel now reads topdirs.cmi
   from +compiler-libs, as the debugger does.
@@ -435,6 +435,9 @@ OCaml 5.0
 - #11387, module type with constraints no longer crash the compiler in presence
   of both shadowing warnings and the `-bin-annot` compiler flag.
   (Florian Angeletti, report by Christophe Raffalli, review by Gabriel Scherer)
+
+- #11392, #11392: assertion failure with -rectypes and external definitions
+  (Gabriel Scherer, review by Florian Angeletti, report by Dmitrii Kosarev)
 
 OCaml 4.14.0
 ----------------
